--- a/hr_expense_invoice/i18n/de.po
+++ b/hr_expense_invoice/i18n/de.po
@@ -3,20 +3,22 @@
 # * hr_expense_invoice
 # 
 # Translators:
-# Mohamed HABOU <m.habou@agoradeveloppement.com>, 2016
+# Rudolf Schnapka <rs@techno-flex.de>, 2016
+# Thomas A. Jaeger, 2015
+# Thomas A. Jaeger, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: hr (8.0)\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2015-11-30 05:19+0000\n"
-"PO-Revision-Date: 2016-01-11 17:13+0000\n"
-"Last-Translator: Mohamed HABOU <m.habou@agoradeveloppement.com>\n"
-"Language-Team: French (http://www.transifex.com/oca/OCA-hr-8-0/language/fr/)\n"
+"PO-Revision-Date: 2016-01-26 09:44+0000\n"
+"Last-Translator: Rudolf Schnapka <rs@techno-flex.de>\n"
+"Language-Team: German (http://www.transifex.com/oca/OCA-hr-8-0/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: fr\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: de\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: hr_expense_invoice
 #: code:addons/hr_expense_invoice/models/hr_expense_expense.py:49
@@ -24,24 +26,24 @@ msgstr ""
 msgid ""
 "Cannot reconcile supplier invoice payable with generated line. Please check "
 "amounts and see if the invoice is already added or paid. Invoice: %s"
-msgstr ""
+msgstr "Die erstellte Zeile kann nicht mit der Lieferantenrechnung ausgeglichen werden. Prüfen Sie, ob die Rechnung bereits hinzugefügt oder bezahlt ist. Rechnung: %s"
 
 #. module: hr_expense_invoice
 #: model:ir.model,name:hr_expense_invoice.model_hr_expense_expense
 msgid "Expense"
-msgstr "Frais"
+msgstr "Aufwand"
 
 #. module: hr_expense_invoice
 #: model:ir.model,name:hr_expense_invoice.model_hr_expense_line
 msgid "Expense Line"
-msgstr "Ligne de frais"
+msgstr "Spesendetail"
 
 #. module: hr_expense_invoice
 #: field:hr.expense.line,invoice:0
 msgid "Invoice"
-msgstr "Facture"
+msgstr "Rechnung"
 
 #. module: hr_expense_invoice
 #: view:hr.expense.expense:hr_expense_invoice.view_expenses_form_invoice
 msgid "{'readonly': [('invoice', '!=', False)]}"
-msgstr ""
+msgstr "{'readonly': [('invoice', '!=', False)]}"
