--- a/hr_expense_invoice/i18n/it.po
+++ b/hr_expense_invoice/i18n/it.po
@@ -3,20 +3,20 @@
 # * hr_expense_invoice
 # 
 # Translators:
-# Mohamed HABOU <m.habou@agoradeveloppement.com>, 2016
+# Paolo Valier, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: hr (8.0)\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-11-30 05:19+0000\n"
-"PO-Revision-Date: 2016-01-11 17:13+0000\n"
-"Last-Translator: Mohamed HABOU <m.habou@agoradeveloppement.com>\n"
-"Language-Team: French (http://www.transifex.com/oca/OCA-hr-8-0/language/fr/)\n"
+"POT-Creation-Date: 2016-03-12 12:02+0000\n"
+"PO-Revision-Date: 2016-03-19 10:40+0000\n"
+"Last-Translator: Paolo Valier\n"
+"Language-Team: Italian (http://www.transifex.com/oca/OCA-hr-8-0/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: fr\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Language: it\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: hr_expense_invoice
 #: code:addons/hr_expense_invoice/models/hr_expense_expense.py:49
@@ -29,17 +29,17 @@ msgstr ""
 #. module: hr_expense_invoice
 #: model:ir.model,name:hr_expense_invoice.model_hr_expense_expense
 msgid "Expense"
-msgstr "Frais"
+msgstr ""
 
 #. module: hr_expense_invoice
 #: model:ir.model,name:hr_expense_invoice.model_hr_expense_line
 msgid "Expense Line"
-msgstr "Ligne de frais"
+msgstr ""
 
 #. module: hr_expense_invoice
 #: field:hr.expense.line,invoice:0
 msgid "Invoice"
-msgstr "Facture"
+msgstr "Fattura"
 
 #. module: hr_expense_invoice
 #: view:hr.expense.expense:hr_expense_invoice.view_expenses_form_invoice
