--- a/hr_expense_invoice/i18n/cs_CZ.po
+++ b/hr_expense_invoice/i18n/cs_CZ.po
@@ -1,20 +1,23 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# 	* hr_expense_invoice
+# * hr_expense_invoice
 #
+# Translators:
+# Lukáš Spurný <lukasspurny8@gmail.com>, 2018
 msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-09-27 16:34+0000\n"
-"PO-Revision-Date: 2017-09-27 16:34+0000\n"
-"Last-Translator: <>\n"
-"Language-Team: \n"
-"Language: \n"
+"POT-Creation-Date: 2018-02-23 03:45+0000\n"
+"PO-Revision-Date: 2018-02-23 03:45+0000\n"
+"Last-Translator: Lukáš Spurný <lukasspurny8@gmail.com>, 2018\n"
+"Language-Team: Czech (Czech Republic) (https://www.transifex.com/oca/"
+"teams/23907/cs_CZ/)\n"
+"Language: cs_CZ\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: \n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 #. module: hr_expense_invoice
 #: code:addons/hr_expense_invoice/models/hr_expense_sheet.py:37
@@ -23,21 +26,21 @@ msgid ""
 "Cannot reconcile supplier invoice payable with generated line. Please check "
 "amounts and see if the invoice is already added or paid. Invoice: %s"
 msgstr ""
-"No se puede conciliar el saldo a pagar de la factura con la línea generada. "
-"Compruebe por favor las cantidades y vea si la factura ya está añadida "
-"previamente o pagada. Factura: %s"
+"Nelze sladit dodavatelskou fakturu se zaplacenou generovanou linkou. "
+"Zkontrolujte částky a zjistěte, zda již faktura již byla přidána nebo "
+"zaplacena. Faktura: %s"
 
 #. module: hr_expense_invoice
 #: model:ir.model,name:hr_expense_invoice.model_hr_expense
 msgid "Expense"
-msgstr "Gasto"
+msgstr "Výdaje"
 
 #. module: hr_expense_invoice
 #: model:ir.model,name:hr_expense_invoice.model_hr_expense_sheet
 msgid "Expense Report"
-msgstr "Informe de gastos"
+msgstr "Zpráva o výdajích"
 
 #. module: hr_expense_invoice
 #: model:ir.model.fields,field_description:hr_expense_invoice.field_hr_expense_invoice_id
 msgid "Invoice"
-msgstr "Factura"
+msgstr "Faktura"
