--- a/hr_expense_invoice/i18n/fr.po
+++ b/hr_expense_invoice/i18n/fr.po
@@ -1,48 +1,45 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
 # * hr_expense_invoice
-# 
+#
 # Translators:
-# Christophe CHAUVET <christophe.chauvet@gmail.com>, 2016
-# Mohamed HABOU <m.habou@agoradeveloppement.com>, 2016
+# guillaume bauer <guillaume.bauer@syentys.com>, 2017
+# Alexandre Fayolle <alexandre.fayolle@camptocamp.com>, 2018
 msgid ""
 msgstr ""
-"Project-Id-Version: hr (8.0)\n"
+"Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-10-17 20:43+0000\n"
-"PO-Revision-Date: 2016-10-17 12:12+0000\n"
-"Last-Translator: Christophe CHAUVET <christophe.chauvet@gmail.com>\n"
-"Language-Team: French (http://www.transifex.com/oca/OCA-hr-8-0/language/fr/)\n"
+"POT-Creation-Date: 2018-02-23 03:45+0000\n"
+"PO-Revision-Date: 2018-02-23 03:45+0000\n"
+"Last-Translator: Alexandre Fayolle <alexandre.fayolle@camptocamp.com>, 2018\n"
+"Language-Team: French (https://www.transifex.com/oca/teams/23907/fr/)\n"
+"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #. module: hr_expense_invoice
-#: code:addons/hr_expense_invoice/models/hr_expense_expense.py:52
+#: code:addons/hr_expense_invoice/models/hr_expense_sheet.py:37
 #, python-format
 msgid ""
 "Cannot reconcile supplier invoice payable with generated line. Please check "
 "amounts and see if the invoice is already added or paid. Invoice: %s"
-msgstr "Impossible de reconcilier une facture fournisseur avec les lignes générées. Veuillez vérifier les montant et voir si la facture est déjà créé ou payer. Facture %s"
+msgstr ""
+"Impossible de réconcilier la facture fournisseur avec la ligne générée. "
+"Vérifiez le montant et si la facture est déjà ajoutée ou payée. Facture: %s"
 
 #. module: hr_expense_invoice
-#: model:ir.model,name:hr_expense_invoice.model_hr_expense_expense
+#: model:ir.model,name:hr_expense_invoice.model_hr_expense
 msgid "Expense"
-msgstr "Frais"
+msgstr "Note de frais"
 
 #. module: hr_expense_invoice
-#: model:ir.model,name:hr_expense_invoice.model_hr_expense_line
-msgid "Expense Line"
-msgstr "Ligne de frais"
+#: model:ir.model,name:hr_expense_invoice.model_hr_expense_sheet
+msgid "Expense Report"
+msgstr "Rapport de dépenses"
 
 #. module: hr_expense_invoice
-#: field:hr.expense.line,invoice:0
+#: model:ir.model.fields,field_description:hr_expense_invoice.field_hr_expense_invoice_id
 msgid "Invoice"
 msgstr "Facture"
-
-#. module: hr_expense_invoice
-#: view:hr.expense.expense:hr_expense_invoice.view_expenses_form_invoice
-msgid "{'readonly': [('invoice', '!=', False)]}"
-msgstr "{'readonly': [('invoice', '!=', False)]}"
