--- a/hr_expense_invoice/i18n/nl_NL.po
+++ b/hr_expense_invoice/i18n/nl_NL.po
@@ -1,24 +1,26 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
 # * hr_expense_invoice
-# 
+#
 # Translators:
+# Peter Hageman <hageman.p@gmail.com>, 2017
 msgid ""
 msgstr ""
-"Project-Id-Version: hr (8.0)\n"
+"Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-08-19 02:40+0000\n"
-"PO-Revision-Date: 2015-07-27 23:44+0000\n"
-"Last-Translator: <>\n"
-"Language-Team: Dutch (Netherlands) (http://www.transifex.com/oca/OCA-hr-8-0/language/nl_NL/)\n"
+"POT-Creation-Date: 2017-11-28 01:43+0000\n"
+"PO-Revision-Date: 2017-11-28 01:43+0000\n"
+"Last-Translator: Peter Hageman <hageman.p@gmail.com>, 2017\n"
+"Language-Team: Dutch (Netherlands) (https://www.transifex.com/oca/"
+"teams/23907/nl_NL/)\n"
+"Language: nl_NL\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: nl_NL\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. module: hr_expense_invoice
-#: code:addons/hr_expense_invoice/models/hr_expense_expense.py:52
+#: code:addons/hr_expense_invoice/models/hr_expense_sheet.py:37
 #, python-format
 msgid ""
 "Cannot reconcile supplier invoice payable with generated line. Please check "
@@ -26,21 +28,16 @@ msgid ""
 msgstr ""
 
 #. module: hr_expense_invoice
-#: model:ir.model,name:hr_expense_invoice.model_hr_expense_expense
+#: model:ir.model,name:hr_expense_invoice.model_hr_expense
 msgid "Expense"
 msgstr ""
 
 #. module: hr_expense_invoice
-#: model:ir.model,name:hr_expense_invoice.model_hr_expense_line
-msgid "Expense Line"
-msgstr ""
+#: model:ir.model,name:hr_expense_invoice.model_hr_expense_sheet
+msgid "Expense Report"
+msgstr "Onkostennota"
 
 #. module: hr_expense_invoice
-#: field:hr.expense.line,invoice:0
+#: model:ir.model.fields,field_description:hr_expense_invoice.field_hr_expense_invoice_id
 msgid "Invoice"
-msgstr "Factuur"
-
-#. module: hr_expense_invoice
-#: view:hr.expense.expense:hr_expense_invoice.view_expenses_form_invoice
-msgid "{'readonly': [('invoice', '!=', False)]}"
 msgstr ""
