--- a/hr_expense_invoice/i18n/es.po
+++ b/hr_expense_invoice/i18n/es.po
@@ -1,48 +1,38 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-# * hr_expense_invoice
-# 
-# Translators:
-# Antonio Trueba, 2016
-# Antonio Trueba, 2016
+#	* hr_expense_invoice
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: hr (8.0)\n"
+"Project-Id-Version: Odoo Server 10.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-10-17 20:43+0000\n"
-"PO-Revision-Date: 2016-11-11 13:00+0000\n"
-"Last-Translator: Antonio Trueba\n"
-"Language-Team: Spanish (http://www.transifex.com/oca/OCA-hr-8-0/language/es/)\n"
+"POT-Creation-Date: 2017-09-27 16:34+0000\n"
+"PO-Revision-Date: 2017-09-27 16:34+0000\n"
+"Last-Translator: <>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: \n"
 
 #. module: hr_expense_invoice
-#: code:addons/hr_expense_invoice/models/hr_expense_expense.py:52
+#: code:addons/hr_expense_invoice/models/hr_expense_sheet.py:35
 #, python-format
-msgid ""
-"Cannot reconcile supplier invoice payable with generated line. Please check "
-"amounts and see if the invoice is already added or paid. Invoice: %s"
+msgid "Cannot reconcile supplier invoice payable with generated line. Please check amounts and see if the invoice is already added or paid. Invoice: %s"
 msgstr "No se puede conciliar el saldo a pagar de la factura con la línea generada. Compruebe por favor las cantidades y vea si la factura ya está añadida previamente o pagada. Factura: %s"
 
 #. module: hr_expense_invoice
-#: model:ir.model,name:hr_expense_invoice.model_hr_expense_expense
+#: model:ir.model,name:hr_expense_invoice.model_hr_expense
 msgid "Expense"
 msgstr "Gasto"
 
 #. module: hr_expense_invoice
-#: model:ir.model,name:hr_expense_invoice.model_hr_expense_line
-msgid "Expense Line"
-msgstr "Línea de gasto"
+#: model:ir.model,name:hr_expense_invoice.model_hr_expense_sheet
+msgid "Expense Report"
+msgstr "Informe de gastos"
 
 #. module: hr_expense_invoice
-#: field:hr.expense.line,invoice:0
+#: model:ir.model.fields,field_description:hr_expense_invoice.field_hr_expense_invoice_id
 msgid "Invoice"
 msgstr "Factura"
 
-#. module: hr_expense_invoice
-#: view:hr.expense.expense:hr_expense_invoice.view_expenses_form_invoice
-msgid "{'readonly': [('invoice', '!=', False)]}"
-msgstr "{'readonly': [('invoice', '!=', False)]}"
