--- a/hr_expense_cancel/i18n/hr_expense_cancel.pot
+++ b/hr_expense_cancel/i18n/hr_expense_cancel.pot
@@ -1,12 +1,12 @@
 # Translation of Odoo Server.
 # This file contains the translation of the following modules:
-#	* hr_expense_cancel
+# 	* hr_expense_cancel
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 12.0\n"
+"Project-Id-Version: Odoo Server 13.0\n"
 "Report-Msgid-Bugs-To: \n"
-"Last-Translator: <>\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,4 +37,3 @@ msgstr ""
 #: model:ir.model,name:hr_expense_cancel.model_account_payment
 msgid "Payments"
 msgstr ""
-
