--- a/hr_expense_cancel/i18n/hr_expense_cancel.pot
+++ b/hr_expense_cancel/i18n/hr_expense_cancel.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 14.0\n"
+"Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -15,25 +15,15 @@ msgstr ""
 
 #. module: hr_expense_cancel
 #: model_terms:ir.ui.view,arch_db:hr_expense_cancel.view_hr_expense_sheet_form
-msgid "Cancel"
+msgid "Cancel all related operations"
 msgstr ""
 
 #. module: hr_expense_cancel
-#: model:ir.model.fields,field_description:hr_expense_cancel.field_hr_expense_sheet__display_name
-msgid "Display Name"
+#: model_terms:ir.ui.view,arch_db:hr_expense_cancel.view_hr_expense_sheet_form
+msgid "Cancel journal entries, payments and reconciliations"
 msgstr ""
 
 #. module: hr_expense_cancel
 #: model:ir.model,name:hr_expense_cancel.model_hr_expense_sheet
 msgid "Expense Report"
-msgstr ""
-
-#. module: hr_expense_cancel
-#: model:ir.model.fields,field_description:hr_expense_cancel.field_hr_expense_sheet__id
-msgid "ID"
-msgstr ""
-
-#. module: hr_expense_cancel
-#: model:ir.model.fields,field_description:hr_expense_cancel.field_hr_expense_sheet____last_update
-msgid "Last Modified on"
 msgstr ""
