--- a/hr_expense_cancel/i18n/es.po
+++ b/hr_expense_cancel/i18n/es.po
@@ -4,11 +4,11 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 11.0\n"
+"Project-Id-Version: Odoo Server 16.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-15 06:58+0000\n"
-"PO-Revision-Date: 2019-02-15 06:58+0000\n"
-"Last-Translator: <>\n"
+"POT-Creation-Date: 2023-06-02 07:12+0000\n"
+"PO-Revision-Date: 2023-06-02 07:12+0000\n"
+"Last-Translator: \n"
 "Language-Team: \n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -18,35 +18,15 @@ msgstr ""
 
 #. module: hr_expense_cancel
 #: model_terms:ir.ui.view,arch_db:hr_expense_cancel.view_hr_expense_sheet_form
-msgid "Cancel"
-msgstr "Cancelar"
+msgid "Cancel all related operations"
+msgstr "Cancelar todas las operaciones relacionadas"
 
 #. module: hr_expense_cancel
-#: model:ir.model.fields,field_description:hr_expense_cancel.field_hr_expense_sheet__display_name
-msgid "Display Name"
-msgstr ""
+#: model_terms:ir.ui.view,arch_db:hr_expense_cancel.view_hr_expense_sheet_form
+msgid "Cancel journal entries, payments and reconciliations"
+msgstr "Cancelar asientos, pagos y conciliaciones"
 
 #. module: hr_expense_cancel
 #: model:ir.model,name:hr_expense_cancel.model_hr_expense_sheet
 msgid "Expense Report"
-msgstr "Nota de gastos"
-
-#. module: hr_expense_cancel
-#: model:ir.model.fields,field_description:hr_expense_cancel.field_hr_expense_sheet__id
-msgid "ID"
-msgstr ""
-
-#. module: hr_expense_cancel
-#: model:ir.model.fields,field_description:hr_expense_cancel.field_hr_expense_sheet____last_update
-msgid "Last Modified on"
-msgstr ""
-
-#~ msgid "Expense sheet"
-#~ msgstr "Nota de gastos"
-
-#~ msgid "Payments"
-#~ msgstr "Pagos"
-
-#, fuzzy
-#~ msgid "Expense Register Payment Wizard"
-#~ msgstr "Asistente registro pago de nota de gastos"
+msgstr "Informe de gastos"
