--- a/hr_expense_invoice/i18n/it.po
+++ b/hr_expense_invoice/i18n/it.po
@@ -4,84 +4,82 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 10.0\n"
+"Project-Id-Version: Odoo Server 15.0\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2018-10-10 12:08+0000\n"
-"Last-Translator: Pedro Castro Silva <pedrocs@exo.pt>\n"
+"PO-Revision-Date: 2023-07-03 11:08+0000\n"
+"Last-Translator: mymage <stefano.consolaro@mymage.it>\n"
 "Language-Team: none\n"
-"Language: pt\n"
+"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: \n"
-"Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 3.1.1\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.17\n"
 
 #. module: hr_expense_invoice
 #: model_terms:ir.ui.view,arch_db:hr_expense_invoice.hr_expense_sheet_form_view_inherit_sale_expense
 msgid "Create Vendor Bill"
-msgstr ""
+msgstr "Crea conto fornitore"
 
 #. module: hr_expense_invoice
 #: model:ir.model,name:hr_expense_invoice.model_hr_expense
 msgid "Expense"
-msgstr "Despesa"
+msgstr "Spesa"
 
 #. module: hr_expense_invoice
 #: model:ir.model,name:hr_expense_invoice.model_hr_expense_sheet
 msgid "Expense Report"
-msgstr "Relatório de Despesas"
+msgstr "Nota spese"
 
 #. module: hr_expense_invoice
 #: model:ir.model.fields,help:hr_expense_invoice.field_hr_expense__sheet_id_state
 msgid "Expense Report State"
-msgstr ""
+msgstr "Stato nota spese"
 
 #. module: hr_expense_invoice
 #: model:ir.model.fields,field_description:hr_expense_invoice.field_account_bank_statement_line__expense_ids
 #: model:ir.model.fields,field_description:hr_expense_invoice.field_account_move__expense_ids
 #: model:ir.model.fields,field_description:hr_expense_invoice.field_account_payment__expense_ids
-#, fuzzy
 msgid "Expenses"
-msgstr "Despesa"
+msgstr "Spese"
 
 #. module: hr_expense_invoice
 #: model:ir.model.fields,field_description:hr_expense_invoice.field_hr_expense_sheet__invoice_count
-#, fuzzy
 msgid "Invoice Count"
-msgstr "Fatura"
+msgstr "Conteggio fatture"
 
 #. module: hr_expense_invoice
 #: code:addons/hr_expense_invoice/models/hr_expense_sheet.py:0
 #: model_terms:ir.ui.view,arch_db:hr_expense_invoice.hr_expense_sheet_form_view_inherit_sale_expense
-#, fuzzy, python-format
+#, python-format
 msgid "Invoices"
-msgstr "Fatura"
+msgstr "Fatture"
 
 #. module: hr_expense_invoice
 #: model:ir.model,name:hr_expense_invoice.model_account_move
 msgid "Journal Entry"
-msgstr ""
+msgstr "Registrazione contabile"
 
 #. module: hr_expense_invoice
 #: model:ir.model,name:hr_expense_invoice.model_account_payment_register
 msgid "Register Payment"
-msgstr ""
+msgstr "Registra pagamento"
 
 #. module: hr_expense_invoice
 #: code:addons/hr_expense_invoice/wizard/account_payment_register.py:0
 #, python-format
 msgid "Register payment on expense's invoice is not allowed"
-msgstr ""
+msgstr "Non è consentito registrare il pagamento sulla fattura delle spese"
 
 #. module: hr_expense_invoice
 #: model:ir.model.fields,field_description:hr_expense_invoice.field_hr_expense__sheet_id_state
 msgid "Sheet state"
-msgstr ""
+msgstr "Stato prospetto"
 
 #. module: hr_expense_invoice
 #: model:ir.model.fields,field_description:hr_expense_invoice.field_hr_expense__invoice_id
 msgid "Vendor Bill"
-msgstr ""
+msgstr "Fattura fornitore"
 
 #. module: hr_expense_invoice
 #: code:addons/hr_expense_invoice/models/hr_expense_sheet.py:0
@@ -90,13 +88,16 @@ msgid ""
 "Vendor bill amount mismatch!\n"
 "Please make sure amount in vendor bills equal to amount of its expense lines"
 msgstr ""
+"Differenza fattura fornitore!\n"
+"Assicurarsi che il valore nel conto del fornitore sia pari al valore delle "
+"righe di spesa"
 
 #. module: hr_expense_invoice
 #: code:addons/hr_expense_invoice/models/hr_expense.py:0
 #: code:addons/hr_expense_invoice/models/hr_expense_sheet.py:0
 #, python-format
 msgid "Vendor bill state must be Posted"
-msgstr ""
+msgstr "Lo stato del conto fornitore deve essere Inviato"
 
 #. module: hr_expense_invoice
 #: code:addons/hr_expense_invoice/models/account_move.py:0
@@ -105,15 +106,5 @@ msgid ""
 "You can't change the total amount, as there's an expense linked to this "
 "invoice."
 msgstr ""
-
-#, fuzzy
-#~ msgid "Create Invoice"
-#~ msgstr "Fatura"
-
-#~ msgid ""
-#~ "Cannot reconcile supplier invoice payable with generated line. Please "
-#~ "check amounts and see if the invoice is already added or paid. Invoice: %s"
-#~ msgstr ""
-#~ "Não foi possível reconciliar a fatura a pagar ao fornecedor com a linha "
-#~ "gerada. Por favor, verifique os montantes e veja se a fatura já está "
-#~ "adicionada ou paga. Fatura: %s"
+"Non si può cambiare il valore totale, perché c'è una spesa collegata a "
+"questa fattura."
